--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
   display: grid;
   /* grid-template-columns: 50% 50%; */
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 15vh repeat(5, 1fr);
+  grid-template-rows: 15vmin 100vmin 95vmin 75vmin 95vmin 1fr;
   /* grid-template-rows: 15vh auto; */
   grid-template-areas:
     "space-l1 navbar navbar navbar navbar navbar navbar navbar navbar space-r1"
     "space-l2-2 exp-text exp-text exp-text exp-text exp-img exp-img exp-img exp-img space-r1-2"
     "nebula nebula nebula nebula neb-text neb-text neb-text neb-text neb-text space-r2"
-    "space-l2 quote quote quote quote quote quote quote quote space-r3"
+    "space-l2 space-l2 quote quote quote quote quote quote space-r3 space-r3"
     "lounge lounge lounge lounge lounge lounge space-c1 verbage verbage topo"
     "space-l4 footer footer footer footer footer footer footer footer space-r5";
 }
@@ -51,35 +51,36 @@ u {
   grid-area: nebula;
   width: 75%;
   /* margin-top: 0; */
-  margin: 0 auto;
+  margin: auto;
 
 }
 
 .girl-nebula {
+  margin: auto;
+  height: 75%;
   font-family: sans-serif;
   font-size: 1vmax;
   line-height: 2;
-  margin-top: 5%;
+  /* margin-top: 5vmin; */
   color: grey;
   grid-area: neb-text;
   display: grid;
   grid-gap: 2vw;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 20% 30% 1fr;
+  grid-template-rows: 40% 60%;
   grid-template-areas:
     "heading heading heading heading r-space2"
-    "l-space text1 text1 text2 text2"
-    "l-space underl underl b-space b-space";
+    "l-space text1 text1 text2 text2";
 }
 
 .girl-nebula h2 {
   width: 120%;
-  margin-left: 7%;
+  margin-top: 10vmin;
+  margin-left: 7vmin;
   grid-area: heading;
   color: black;
   font-size: 2vmax;
   line-height: 1.5;
-  margin-top: 10%;
 }
 
 .girl-nebula-text-1 {
@@ -92,18 +93,22 @@ u {
   margin: 0;
 }
 
-.girl-nebula u {
+/* .girl-nebula u {
   grid-area: underl;
   margin-top: -30%;
-}
+} */
 
+.quote-img {
+  width: 3.5vw;
+}
 
 .quote {
   grid-area: quote;
-  width: 55%;
-  margin: auto;
-  padding: 15vmin;
+  /* width: 55%; */
+  margin: auto 2.5vw;
+  /* padding: 15vmin; */
   text-align: center;
+  padding-bottom: 15vmin;
 }
 
 .quote-text {
@@ -118,7 +123,7 @@ u {
 
 .lounge {
   grid-area: lounge;
-  width: 100%;
+  height: 100%;
 }
 
 .lounge-verbage strong {
@@ -194,32 +199,9 @@ u {
     .foot {
       grid-area: footer;
     }
-  }
-  @media screen and (max-width: 767px) {
-    .site {
-      display: grid;
-      grid-template-columns: 100%;
-      grid-template-rows: 15vh 60% 1fr 1fr;
-      grid-template-areas:
-        "title"
-        "lounge"
-        "verbage"
-        "footer";
-      margin: 0px;
-    }
-
-    .lounge {
-      grid-area: lounge;
-      width: 100%;
-    }
-    .verbage {
-      grid-area: verbage;
-    }
-    .title {
-      grid-area: title;
-    }
-    .foot {
-      grid-area: footer;
-    }
+  }*/
+/* @media screen and (orientation:portrait) {
+  .site {
+    grid-template-rows: 15vh 80vmin 60vmin 60vmin 90vmin 1fr;
   }
 } */
