--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   display: grid;
   /* grid-template-columns: 50% 50%; */
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 15vmin 100vmin 95vmin 75vmin 95vmin 1fr;
+  grid-template-rows: 15vmin 100vmin 95vmin 75vmin 95vmin 190vmin 1fr;
   /* grid-template-rows: 15vh auto; */
   grid-template-areas:
     "space-l1 navbar navbar navbar navbar navbar navbar navbar navbar space-r1"
@@ -12,6 +12,7 @@
     "nebula nebula nebula nebula neb-text neb-text neb-text neb-text neb-text space-r2"
     "space-l2 space-l2 quote quote quote quote quote quote space-r3 space-r3"
     "lounge lounge lounge lounge lounge lounge space-c1 verbage verbage topo"
+    "space-l3 vision vision vision vision vision vision vision vision space-r4"
     "space-l4 footer footer footer footer footer footer footer footer space-r5";
 }
 
@@ -170,6 +171,90 @@ u {
 .title {
   grid-area: title;
 }
+
+
+.vision {
+  grid-area: vision;
+  padding-top: 20vh;
+  display: grid;
+  grid-gap: 5vw;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  /* grid-template-columns: repeat(2, minmax(max-content, 1fr));
+  grid-template-rows: repeat(10, minmax(max-content, 1fr)); */
+  /* grid-template-areas:
+    "title-v space-r1"
+    "text-v bking"
+    "space-l3 bking"
+    "laptop bking"
+    "laptop text-gov"
+    "text-startup boardroom"
+    "pedestrians boardroom"
+    "pedestrians text-corp"
+    "pedestrians space-r9"
+    "text-public space-r10"; */
+  /* margin: auto;
+  height: 75%;
+  font-family: sans-serif;
+  font-size: 1vmax;
+  line-height: 2;
+  /* margin-top: 5vmin;
+  color: grey;*/
+}
+
+.title-v {  grid-area: 1 / 1 / 2 / 2 ; color: black; }
+.text-v {  grid-area: 2 / 1 / 3 / 2 ; }
+.bking {
+  grid-area: 2 / 2 / 5 / 3 ;
+  /* height: 100%; */
+  width: 80%;
+}
+.laptop {
+  grid-area: 4 / 1 / 6 / 2 ;
+  /* height: 100%; */
+  width: 80%;
+}
+.text-gov { grid-area: 5 / 2 / 6 / 3 ; }
+.text-startup { grid-area: 6 / 1 / 7 / 2 ; }
+.boardroom {
+  grid-area: 6 / 2 / 8 / 3 ;
+  /* height: 100%; */
+  width: 80%;
+}
+.pedestrians {
+  grid-area: 7 / 1 / 10 / 2 ;
+  /* height: 100%; */
+  width: 80%;
+}
+.text-corp { grid-area: 8 / 2 / 9 / 3 ; }
+.text-public { grid-area: 10 / 1 / 11 / 2 ; }
+
+/*
+.title-v {  grid-area: title-v; }
+.text-v {  grid-area: text-v; }
+.bking {
+  grid-area: bking;
+   width: 100%;
+}
+.laptop {
+  grid-area: laptop;
+   width: 100%;
+}
+.text-gov { grid-area: text-gov; }
+.text-startup { grid-area: text-startup; }
+.boardroom {
+  grid-area: boardroom;
+ width: 100%;
+}
+.pedestrians {
+  grid-area: pedestrians;
+   width: 100%;
+}
+.text-corp { grid-area: text-corp; }
+.text-public { grid-area: text-public; }
+*/
+
+
 .foot {
   grid-area: footer;
 }
