--- a/style.css
+++ b/style.css
@@ -16,6 +16,21 @@
     "space-l4 footer footer footer footer footer footer footer footer space-r5";
 }
 
+h1, h2, h3, strong {
+  color: black;
+  /* padding-bottom: 2vh; */
+}
+
+strong {
+  font-family: sans-serif;
+  font-size: 1.8vw;
+}
+
+p {
+  font-family: sans-serif;
+  font-size: 1vw;
+}
+
 .topbar {
   grid-area: navbar;
 }
@@ -28,7 +43,7 @@ u {
 */
 
 .explore-text {
-  font-size: 8vmax;
+  font-size: 8vw;
   color: black;
   grid-area: exp-text;
   text-align: right;
@@ -60,7 +75,7 @@ u {
   margin: auto;
   height: 75%;
   font-family: sans-serif;
-  font-size: 1vmax;
+  font-size: 1vw;
   line-height: 2;
   /* margin-top: 5vmin; */
   color: grey;
@@ -80,7 +95,7 @@ u {
   margin-left: 7vmin;
   grid-area: heading;
   color: black;
-  font-size: 2vmax;
+  font-size: 2vw;
   line-height: 1.5;
 }
 
@@ -114,12 +129,12 @@ u {
 
 .quote-text {
   color: black;
-  font-size: 2.2vmax;
+  font-size: 2.2vw;
 }
 
 .quote-author {
   font-family: sans-serif;
-  font-size: .95vmax;
+  font-size: .95vw;
 }
 
 .lounge {
@@ -130,7 +145,7 @@ u {
 .lounge-verbage strong {
   color: black;
   font-family: serif;
-  font-size: 3.5vmax;
+  font-size: 3.5vw;
   display: block;
   padding-bottom: 1em;
 }
@@ -138,7 +153,7 @@ u {
 .lounge-verbage a {
   display: block;
   padding-top: 1.5em;
-  font-size: 1.1vmax;
+  font-size: 1.1vw;
 }
 
 .lounge-verbage{
@@ -151,7 +166,7 @@ u {
     "left-space words1 right-space"
     "left-space bottom-space right-space"; */
   font-family: sans-serif;
-  font-size: 1vmax;
+  font-size: 1vw;
   margin: auto 0;
 }
 
@@ -177,11 +192,9 @@ u {
   grid-area: vision;
   padding-top: 20vh;
   display: grid;
-  grid-gap: 5vw;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  /* grid-template-columns: repeat(2, minmax(max-content, 1fr));
-  grid-template-rows: repeat(10, minmax(max-content, 1fr)); */
+  grid-template-rows: repeat(10,10%);
+  /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
   /* grid-template-areas:
     "title-v space-r1"
     "text-v bking"
@@ -193,41 +206,54 @@ u {
     "pedestrians text-corp"
     "pedestrians space-r9"
     "text-public space-r10"; */
-  /* margin: auto;
-  height: 75%;
-  font-family: sans-serif;
-  font-size: 1vmax;
-  line-height: 2;
-  /* margin-top: 5vmin;
-  color: grey;*/
 }
 
 .title-v {  grid-area: 1 / 1 / 2 / 2 ; color: black; }
 .text-v {  grid-area: 2 / 1 / 3 / 2 ; }
 .bking {
   grid-area: 2 / 2 / 5 / 3 ;
-  /* height: 100%; */
-  width: 80%;
+  height: 51vmin;
+  margin-left: 3vw;
+  /* width: 80%; */
 }
 .laptop {
   grid-area: 4 / 1 / 6 / 2 ;
   /* height: 100%; */
-  width: 80%;
+  height: 34vmin;
+  /* width: 80%; */
 }
-.text-gov { grid-area: 5 / 2 / 6 / 3 ; }
-.text-startup { grid-area: 6 / 1 / 7 / 2 ; }
+.text-gov {
+  grid-area: 5 / 2 / 6 / 3;
+  margin-left: 6vw;
+  /* margin-left: */
+}
+.text-startup {
+  grid-area: 6 / 1 / 7 / 2;
+  margin-left: 3vw;
+}
 .boardroom {
   grid-area: 6 / 2 / 8 / 3 ;
   /* height: 100%; */
-  width: 80%;
+  height: 34vmin;
+  margin-left: 6vw;
+  /* width: 80%; */
 }
 .pedestrians {
   grid-area: 7 / 1 / 10 / 2 ;
   /* height: 100%; */
-  width: 80%;
+  height: 51vmin;
+  margin-left: 3vw;
+  /* width: 80%; */
 }
-.text-corp { grid-area: 8 / 2 / 9 / 3 ; }
-.text-public { grid-area: 10 / 1 / 11 / 2 ; }
+.text-corp {
+  grid-area: 8 / 2 / 9 / 3;
+  margin-left: 8vw;
+}
+
+.text-public {
+  grid-area: 10 / 1 / 11 / 2;
+  margin-left: 5vw;
+}
 
 /*
 .title-v {  grid-area: title-v; }
