footer and navbar
Co-authored-by: Paul Rail <paul.a.rail@gmail.com>

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     "space-l3 vision vision vision vision vision vision vision vision space-r4"
     "space-l4 space-l4 challenge challenge challenge challenge challenge challenge space-r5 space-r5"
     "news news news news news news news news news news"
-    "space-l5 footer footer footer footer footer footer footer footer space-r6";
+    "footer footer footer footer footer footer footer footer footer footer";
 }
 
 h1, h2, h3 {
@@ -40,7 +40,26 @@ p {
 
 .topbar {
   grid-area: navbar;
+  padding-top: 5vh;
+  color: black;
+  font-weight: bold;
 }
+.topbar ul{
+  font-size: .95vw;
+  text-align: right;
+  list-style: none;
+  /* display: inline-block; */
+}
+.topbar ul li{
+  /* list-style: none; */
+  display: inline;
+  padding-left: 2vw;
+}
+.topbar a {
+  text-decoration: none;
+  color: black;
+}
+
 /*
 u {
   text-decoration-line: underline;
@@ -50,23 +69,28 @@ u {
 */
 
 .explore-text {
-  font-size: 8vw;
+  font-size: 8.5vw;
   color: black;
   grid-area: exp-text;
   text-align: right;
+  line-height: .9;
+  margin: 19vh 1vw 0 0;
   z-index: 1;
+  padding-top: 10vh;
   padding-bottom: 15vh;
 }
 .explore-img {
   width: 100%;
   margin: auto;
   grid-area: 2 / 5 / 3 / -2;
+  padding-top: 10vh;
   padding-bottom: 15vh;
 }
 .explore-img-small {
   width: 40%;
   margin: auto;
   grid-area: 2 / 5 / 3 / -2;
+  padding-top: 10vh;
   padding-bottom: 15vh;
 }
 
@@ -348,6 +372,30 @@ u {
 
 .foot {
   grid-area: footer;
+  display: grid;
+  grid-template-columns: 11% 39% 39% 11%;
+  grid-template-rows: 100%;
+  grid-template-areas:
+    "l-space social copyright r-space";
+  border-top: 1px solid lightgrey;
+  margin-top: 10vw;
+}
+
+.social-media {
+  grid-area: social;
+  text-align: left;
+  color: black;
+  margin: auto 0;
+}
+
+.social-media i {
+  padding-right: 1.75vw;
+}
+
+.copyright {
+  grid-area: copyright;
+  text-align: right;
+  margin: auto 0;
 }
 
 /* @supports (display: grid) {
