--- a/responsive.css
+++ b/responsive.css
@@ -25,7 +25,7 @@
     } */
   /* } */
 
-@supports (display: grid) {
+/* @supports (display: grid) { */
  @media screen and (max-width: 450px) and (orientation:portrait) {
     .site {
       display: grid;
@@ -88,4 +88,4 @@
     }
 
   }
-}
+/* } */
