--- a/responsive.css
+++ b/responsive.css
@@ -27,64 +27,110 @@
 
 /* @supports (display: grid) { */
  @media screen and (max-width: 450px) and (orientation:portrait) {
+   /* * {
+     margin-top: 0;
+   } */
     .site {
       display: grid;
       grid-template-columns: 100%;
-      grid-template-rows: repeat(12, 1fr);
+      grid-template-rows: 20vh repeat(11, 75vh);
       grid-template-areas:
         "navbar"
         "explore"
-        "nebula-image"
         "nebula-text"
+        "nebula-image"
         "quote"
         "lounge"
         "lounge-text"
         "vision-title"
         "vision-text"  /*grin-in-grid 2x2*/
         "challenge"
-        "news"  /*grin-in-grid 3x1*/
+        "news"  /*grid-in-grid 3x1*/
         "footer";   /*grin-in-grid  2x1*/
     }
 
+    .logo-img {
+        grid-area: navbar;
+        height:
+    }
     .explore-text, .explore-img, .explore-img-small {
       grid-area: explore;
     }
+
+    .downarrow {
+      display: none;
+    }
+
     .girl-nebula-img {
       grid-area: nebula-image;
+      margin: 0;
+      width: 100%;
     }
     .girl-nebula {
       grid-area: nebula-text;
+      margin-top: 0;
+    }
+    .lounge-img {
+      margin: 0;
+      height: auto;
+      width: 100%;
     }
     .lounge-verbage{
       grid-area: lounge-text;
+      margin-top: 0;
     }
-    .title-v, .text-v {
-      grid-area: vision-title;
+    div[class$="-topo"] {
+      display: none;
     }
     .vision {
       grid-area: vision-text;
       display: grid;
       grid-template-columns: 50% 50%;
-      grid-template-rows: 50% 50%;
+      grid-template-rows: 33.3% 33.3% 33.3%;
+    }
+    .vision img {
+      display: none;
+    }
+    div[class^="grey-"], div[class^="white-"]{
+      display: none;
+    }
+    .title-v, .text-v {
+      grid-area: 1 / 1 / 2 / 3;
+    }
+    .text-v {
+      margin-top: 5vh;
     }
     .text-gov {
-      grid-area: 1 / 2 / 2 / 3;
-    }
-    .text-startup {
-      grid-area: 1 / 1 / 2 / 2;
-    }
-    .text-corp {
       grid-area: 2 / 2 / 3 / 3;
     }
-    .text-public {
+    .text-startup {
       grid-area: 2 / 1 / 3 / 2;
+    }
+    .text-corp {
+      grid-area: 3 / 2 / 4 / 3;
+    }
+    .text-public {
+      grid-area: 3 / 1 / 4 / 2;
     }
 
     .news {
       grid-template-columns: 30% 5% 30% 5% 30%;
     }
+    .news1{
+      grid-area: 1 / 1 / 2 / 2;
+    }
+    .news2{
+      grid-area: 1 / 3 / 2 / 4;
+    }
+    .news3{
+      grid-area: 1 / 5 / 2 / 6;
+    }
+
     .foot {
       grid-template-columns: 50% 50%;
+      grid-template-areas:
+        "social copyright";
+      margin-top: 0;
     }
 
   }
